Fixed z-index of menus
git-svn-id: https://svn.cs.ru.nl/repos/iTask-system/trunk@3177 63da3aa8-80fd-4f01-9db8-e6ea747a3da2

--- a/Client/itwc-theme-gray/itwc-theme.scss
+++ b/Client/itwc-theme-gray/itwc-theme.scss
@@ -603,6 +603,7 @@ body, input, td, th, select {
     }
 }
 .menu {
+    z-index: 10;
     top: 23px;
     margin: 0;
     padding: 0;
